fix: proper Blaxel SDK integration, workspace config, graceful fallbacks

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ CLAUDE_MODEL=claude-sonnet-4-20250514
 # Cloud sandboxes for isolated fix testing. Resume in <25ms.
 # Get your key at: https://app.blaxel.ai → Settings → API Keys
 BLAXEL_API_KEY=
+BLAXEL_WORKSPACE=       # Your Blaxel workspace name
 USE_LOCAL_SANDBOX=true  # Set to 'false' when BLAXEL_API_KEY is set
 
 # ─── White Circle AI — Safety Layer ─────────────────────────
